--- a/modules/server/src/main/resources/templates/common/userHead.html
+++ b/modules/server/src/main/resources/templates/common/userHead.html
@@ -5,7 +5,7 @@
         <li class="layui-nav-item">
             <a href="javascript:;">
                 <span th:text="${session.user.name}"></span>
-                <span style="font-size: 10px;" th:text="'('+${roleDesc}+')'"></span>
+                <!--                <span style="font-size: 10px;" th:text="'('+${roleDesc}+')'"></span>-->
             </a>
             <dl class="layui-nav-child">
                 <dd><a href="javascript:;" op="updatePwd">修改密码</a></dd>
