--- a/modules/server/src/main/resources/templates/monitor/list.html
+++ b/modules/server/src/main/resources/templates/monitor/list.html
@@ -16,7 +16,7 @@
 <script type="text/html" id="bar_monitor">
     <a href="javascript:;" class="layui-btn  layui-btn-sm layui-btn-normal" lay-event="update">编辑</a>
 
-    <a href="javascript:;" th:if="${session.user.isSystemUser()}" class="layui-btn  layui-btn-sm layui-btn-danger"
+    <a href="javascript:;" class="layui-btn  layui-btn-sm layui-btn-danger"
        lay-event="delete">删除</a>
 </script>
 <script type="text/html" id="monitor_status">
