--- a/modules/server/src/main/resources/templates/node/manage/projectInfo.html
+++ b/modules/server/src/main/resources/templates/node/manage/projectInfo.html
@@ -6,7 +6,7 @@
 <body>
 <div class="layui-row">
 
-    <button th:if="${session.user.isManage(node.id)}" onclick="editProject('');" class="layui-btn layui-btn-sm">新增项目
+    <button onclick="editProject('');" class="layui-btn layui-btn-sm">新增项目
     </button>
 
     <button onclick="reloadTable();" class="layui-btn layui-btn-sm">刷新表格</button>
