--- a/modules/server/src/main/resources/templates/node/script/console.html
+++ b/modules/server/src/main/resources/templates/node/script/console.html
@@ -58,7 +58,7 @@
 
 <body>
 <div class="console">
-    <div th:if="${session.user.isManage(node.id)}" class="layui-row" id="optDiv">
+    <div class="layui-row" id="optDiv">
         <!-- layui-elem-quote -->
         <a href="javascript:;" class="btn-op layui-btn  layui-btn-sm" op="start">执行</a>
         <!--         <a href="javascript:;" class="btn-op layui-btn  layui-btn-sm layui-btn-warm" op="restart">重启</a>-->
