--- a/modules/server/src/main/resources/templates/node/ssh/list.html
+++ b/modules/server/src/main/resources/templates/node/ssh/list.html
@@ -13,7 +13,7 @@
 </body>
 
 <script type="text/html" id="bar_monitor">
-    <a href="javascript:;" th:if="${session.user.isSystemUser()}" class="layui-btn  layui-btn-sm layui-btn-normal"
+    <a href="javascript:;" class="layui-btn  layui-btn-sm layui-btn-normal"
        lay-event="update">编辑</a>
     <a href="javascript:;" class="layui-btn  layui-btn-sm  layui-btn-warm" lay-event="terminal">终端</a>
     {{# if(d.fileDirs){ }}
