--- a/modules/server/src/main/resources/templates/outgiving/edit.html
+++ b/modules/server/src/main/resources/templates/outgiving/edit.html
@@ -52,7 +52,7 @@
         </div>
 
 
-        <div th:if="${session.user.isServerManager()}" class="layui-form-item"
+        <div class="layui-form-item"
              style="padding-left: 20%;padding-top: 20px;">
             <button class="layui-btn layui-btn-normal" lay-submit lay-filter="form_outgiving">提交
             </button>
