前端页面数据

--- a/modules/server/src/main/resources/templates/user/role/list.html
+++ b/modules/server/src/main/resources/templates/user/role/list.html
@@ -16,9 +16,8 @@
 <script type="text/javascript">
     var col = [
         {field: 'name', title: '名称'},
-        {field: 'email', title: '邮箱'},
-        {field: 'serverManager', templet: "#manager_status", title: '是否是管理员'},
-        {field: 'parent', title: '创建人'},
+        {field: 'bindCount', title: '授权人数'},
+        {field: 'updateTime', title: '修改时间'},
         {field: 'op', title: '操作', align: 'center', toolbar: '#bar', fixed: 'right'}
     ];
 
