--- a/modules/server/src/main/resources/templates/node/list.html
+++ b/modules/server/src/main/resources/templates/node/list.html
@@ -26,7 +26,7 @@
                 <button th:if="${item.sshId}" op="terminal" th:data-name="${sshName.get(item.sshId)}"
                         th:data-id="${item.sshId}"
                         class="layui-btn layui-btn-sm layui-btn-normal ">
-                    <i class="layui-icon   layui-icon-release"></i>
+                    <i class="layui-icon layui-icon-layer"></i>
                     终端
                 </button>
 
