--- a/modules/server/src/main/resources/templates/user/list.html
+++ b/modules/server/src/main/resources/templates/user/list.html
@@ -112,7 +112,7 @@
                     },
                     success: function (data) {
                         layer.msg(data.msg);
-                        if (200 == data.code) {
+                        if (200 === data.code) {
                             table.reload('tab_user', {});
                         }
                     }
