--- a/modules/server/src/main/resources/templates/node/script/list.html
+++ b/modules/server/src/main/resources/templates/node/script/list.html
@@ -34,7 +34,7 @@
                 </button>
                 <button th:sId="${item.id}" text="修改"
                         onclick="editItem(this)"
-                        class="layui-btn layui-btn-sm">
+                        class="layui-btn layui-btn-sm">修改
                 </button>
 
             </td>
